public/style.css
* {
  box-sizing: border-box;
}

html {
  margin: 0;
  padding: 0;
  height: 100vh;
}

body {
  font-size: 18px;
  font-family: 'Fira Sans', sans-serif;
  margin: 0px;
  height: 100vh;
  color: #000000;
  background-color: #fff;
}

h1 {
  font-family: 'Zilla Slab', sans-serif;
  padding-top: 20px;
  padding-bottom: 10px;
}

a {
  color: #000000;
  text-decoration: underline;
}

a:hover {
  color: #003eaa;
}

header {
  width: 100vw;
  padding: 24px;
  background-color: #000000;
  text-align: center;
}

header img {
  height: 100px;
}

.container {
  width: 100vw;
}

.form-container {
  padding: 0px 30px 30px 30px;
  text-align: center;
}

form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 50px;
}

form input {
  display: block;
  min-height: 30px;
  width: 75%;
  font-size: 16px;
  font-family: 'Fira Sans', sans-serif;
}

form select {
  min-height: 30px;
  width: 75%;
}

form textarea {
  display: block;
  min-height: 100px;
  min-width: 75%;
  font-size: 16px;
  font-family: 'Fira Sans', sans-serif;
}

.input-group {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-bottom: 30px;
}

.input-group:first-of-type {
  margin-top: 30px;
}

.input-group label {
  padding-bottom: 10px;
}

label span {
  color: red;
}

.input-group input[type="file"] {
  text-align: center;
  border: none;
}

.input-group input[type="radio"] {
  display: inline-block;
  width: 20px;
  height: 100%;
  margin: 0;
}

.input-group .choice-row {
  display: flex;
  flex-direction: row;
}

.input-group .choice {
  display: flex;
  flex-direction: row-reverse;
}

.input-group .choice:not(:first-child) {
  margin-left: 50px;
}

.input-group .choice label {
  padding-top: 11px;
  padding-left: 17px;
}

button,
.button {
  width: 75%;
  color: #000000;
  background-color: #ffffff;
  border: 3px solid #1c1b22;
  padding: 20px 20px;
  cursor: pointer;
  font-weight: 600;
  -webkit-appearance: none;
}

button:hover,
.button:hover {
  background-color: #1c1b22;
  color: #fff;
}

.toast {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 60px;
  width: 100%;
}

.toast h2 {
  margin-bottom: 0;
}

.failure {
  background-color: #ff0039;
  color: #fff;
}

footer {
  font-size: 14px;
  background-color: #000;
  color: #fff;
  padding: 50px 20px 30px;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

footer a {
  color: #fff;
  text-decoration: underline;
}

footer ul {
  list-style: none;
}

footer ul li {
  display: inline-block;
  padding: 0 24px 16px 0;
}

.error-404 {
  text-align: center;
}

.big-padding {
  padding-top: 30px;
  padding-bottom: 50px;
}

.field-note {
  font-size: 0.7em;
  color: #000;
}

.hero {
  padding-top: 25vh;
  padding-bottom: 30vh;
}

